# vyatta-ipv6-rtradv

./: .frlog  .gitignore  Makefile.am  README  configure.ac  gen-interface-templates.pl
debian/: .gitignore  README  changelog  control  copyright  lintian  rules  vyatta-ipv6-rtradv-extra.install  vyatta-ipv6-rtradv-serial.lintian-overrides  vyatta-ipv6-rtradv.install  vyatta-ipv6-rtradv.postinst.in
etc/modprobe.d/: vyatta_ipv6_noautoconf
interface-templates/ipv6/address/: node.def
interface-templates/ipv6/address/autoconf/: node.def
interface-templates/ipv6/address/dhcpv6/: node.def
interface-templates/ipv6/address/eui64/: node.def
interface-templates/ipv6/disable-forwarding/: node.def
interface-templates/ipv6/dup-addr-detect-transmits/: node.def
interface-templates/ipv6/forwarding/: node.def
interface-templates/ipv6/router-advert/: node.def
interface-templates/ipv6/router-advert/cur-hop-limit/: node.def
interface-templates/ipv6/router-advert/default-lifetime/: node.def
interface-templates/ipv6/router-advert/dnssl/: node.def
interface-templates/ipv6/router-advert/link-mtu/: node.def
interface-templates/ipv6/router-advert/managed-flag/: node.def
interface-templates/ipv6/router-advert/max-interval/: node.def
interface-templates/ipv6/router-advert/min-interval/: node.def
interface-templates/ipv6/router-advert/other-config-flag/: node.def
interface-templates/ipv6/router-advert/prefix/: node.def
interface-templates/ipv6/router-advert/prefix/node.tag/autonomous-flag/: node.def
interface-templates/ipv6/router-advert/prefix/node.tag/on-link-flag/: node.def
interface-templates/ipv6/router-advert/prefix/node.tag/preferred-lifetime/: node.def
interface-templates/ipv6/router-advert/prefix/node.tag/valid-lifetime/: node.def
interface-templates/ipv6/router-advert/reachable-time/: node.def
interface-templates/ipv6/router-advert/retrans-timer/: node.def
interface-templates/ipv6/router-advert/send-advert/: node.def
scripts/: dhcpv6-client-show-leases.pl  vyatta-dhcpv6-client.pl  vyatta-ipv6-eui64.pl  vyatta_gen_radvd.pl
templates-op/show/dhcpv6/client/leases/: node.def
